# fullstack-test-task-refactored

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0d6439d2e79f_init.py  add_indexes.py
backend/src/: main.py
backend/src/application/dtos/: pagination.py
backend/src/application/services/: alert_service.py  file_service.py
backend/src/core/: config.py  database.py  logging.py
backend/src/domain/entities/: models.py
backend/src/domain/repositories/: file_repository.py
backend/src/infrastructure/cache/: redis_cache.py
backend/src/infrastructure/repositories/: postgres_repositories.py
backend/src/infrastructure/storage/: local_storage.py
backend/src/interfaces/api/routes/: alerts.py  files.py
backend/src/interfaces/schemas/: file_schemas.py
backend/src/old_backup/: app.py  models.py  service.py  tasks.py
backend/tests/: test_all.py  test_simple.py
frontend/: .env.production  README.md
